Updated to less 1.2.2 to fix niggling console error in dev mode. Started table.

--- a/widgets-base.less
+++ b/widgets-base.less
@@ -14,6 +14,7 @@ body{padding:20px;font-family:"Segoe UI",Verdana,Tahoma,Helvetica,sans-serif;fon
 @borderRadius: 3px;
 
 @boxPadding : 10px;
+@boxPaddingSmall : 4px;
 
 .toolbar-gradient{
 	background: @gradientDark; /* Old browsers */
