Started on tabs, context menu, standalone icons, and a pillbox style menu. Work in progress.

--- a/table/table.less
+++ b/table/table.less
@@ -3,6 +3,15 @@ table{
 	&{
 		border:1px solid @gradientBorder;
 	}
+	&.selection tr{
+		&{
+			cursor:default;
+		}
+		&:hover{
+			background:@highlightBackground;
+		}
+		
+	}
 	td,th{
 		padding:@boxPaddingSmall @boxPaddingSmall*2;
 	}
