--- a/widgets.less
+++ b/widgets.less
@@ -2,3 +2,7 @@
 @import "sidebar/sidebar.less";
 @import "toolbar/toolbar.less";
 @import "table/table.less";
+@import "tabs/tabs.less";
+@import "icons/icons.less";
+@import "context-menu/context-menu.less";
+@import "pillbox/pillbox.less";
