--- a/widgets-base.less
+++ b/widgets-base.less
@@ -1,6 +1,5 @@
 html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abbr,acronym,address,big,cite,code,del,dfn,em,img,ins,kbd,q,s,samp,small,strike,strong,sub,sup,tt,var,b,u,i,center,dl,dt,dd,ol,ul,li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td,article,aside,canvas,details,embed,figure,figcaption,footer,header,hgroup,menu,nav,output,ruby,section,summary,time,mark,audio,video{margin:0;padding:0;border:0;font-size:100%;font:inherit;vertical-align:baseline}article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section{display:block}body{line-height:1}ol,ul{list-style:none}blockquote,q{quotes:none}blockquote:before,blockquote:after,q:before,q:after{content:'';content:none}table{border-collapse:collapse;border-spacing:0}
 
-body{padding:20px;font-family:"Segoe UI",Verdana,Tahoma,Helvetica,sans-serif;font-size:11px;}
 
 @highlightBackground : #fdeeb3;
 @highlightBorder : #f1c43f;
@@ -16,9 +15,20 @@ body{padding:20px;font-family:"Segoe UI",Verdana,Tahoma,Helvetica,sans-serif;fon
 @boxPadding : 10px;
 @boxPaddingSmall : 4px;
 
+body{
+	background:@gradientDark;
+	color:@textColor;
+	font-family:sans-serif;
+	font-size:12px;
+}
+
 .toolbar-gradient{
-	background: @gradientDark; /* Old browsers */
-	border:1px solid @gradientBorder;
+	background: @gradientLight;
+	color:@textColor;
+/*
+	border-bottom:1px solid ThreeDDarkShadow;
+*/
+	
 	
 	background: -moz-linear-gradient(top, @gradientLight 0%, @gradientDark 100%); /* FF3.6+ */
 	background: -webkit-linear-gradient(top, @gradientLight 0%,@gradientDark 100%); /* Chrome10+,Safari5.1+ */
@@ -29,19 +39,27 @@ body{padding:20px;font-family:"Segoe UI",Verdana,Tahoma,Helvetica,sans-serif;fon
 
 
 .border-radius (@radius) {
+/*
   border-radius: @radius;
   -moz-border-radius: @radius;
   -webkit-border-radius: @radius;
+*/
 }
 
 
 .toolbar-gradient-icon (@icon) {
-	background: @gradientDark; /* Old browsers */
-	border:1px solid @gradientBorder;
+	background: @gradientLight;
+	color:@textColor;
 	
 	background: url("@{icon}"), -moz-linear-gradient(top, @gradientLight 0%, @gradientDark 100%); /* FF3.6+ */
 	background: url("@{icon}"), -webkit-linear-gradient(top, @gradientLight 0%,@gradientDark 100%); /* Chrome10+,Safari5.1+ */
 	background: url("@{icon}"), -o-linear-gradient(top, @gradientLight 0%,@gradientDark 100%); /* Opera 11.10+ */
 	background: url("@{icon}"), -ms-linear-gradient(top, @gradientLight 0%,@gradientDark 100%); /* IE10+ */
 	background: url("@{icon}"), linear-gradient(top, @gradientLight 0%,@gradientDark 100%); /* W3C */
+}
+
+.widget h2{
+    margin-top:2px;
+	padding:.5em 26px .5em 1em;
+    
 }
