Added form fields, because I'm always using these ones.

--- a/widgets.less
+++ b/widgets.less
@@ -6,3 +6,4 @@
 @import "icons/icons.less";
 @import "context-menu/context-menu.less";
 @import "pillbox/pillbox.less";
+@import "form-fields/form-fields.less";
